--- a/all-deploy-sls/action.yml
+++ b/all-deploy-sls/action.yml
@@ -53,6 +53,13 @@ runs:
         USER_INPUT1=${{ inputs.override-stage-name }}
         USER_INPUT2=${{ inputs.environment }}
         echo "value=${USER_INPUT1:-${USER_INPUT2}}" >> $GITHUB_OUTPUT
+    # Can use this to get an SSH endpoint you can connect to and debug via a terminal session.
+    - name: (debug + failure) Setup SSH Session
+      uses: mxschmitt/action-tmate@v3
+      if: ${{ runner.debug == 1 }}
+      with:
+        timeout-minutes: 20
+        limit-access-to-actor: true
     - name: Serverless Deploy to dev
       # Hard-coding the environment for now, when we start dealing with other environments
       # look into environment feature of github actions/workflows.
@@ -67,10 +74,4 @@ runs:
         AWS_ACCESS_KEY_ID: ${{ inputs.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ inputs.AWS_SECRET_ACCESS_KEY }}
         APP_ENV: ${{ inputs.environment }}
-    # Can use this to get an SSH endpoint you can connect to and debug via a terminal session.
-    - name: (debug + failure) Setup SSH Session
-      uses: mxschmitt/action-tmate@v3
-      if: ${{ failure() && runner.debug == 1 }}
-      with:
-        timeout-minutes: 20
-        limit-access-to-actor: true
+
