feat: default to 'dev' deployment.

--- a/.github/workflows/js-create-release.yml
+++ b/.github/workflows/js-create-release.yml
@@ -90,6 +90,6 @@ jobs:
               workflow_id: 'deployment.yml',
               ref: 'refs/tags/${{ needs.create-release.outputs.release-tag }}',
               inputs: {
-                environment: 'test'
+                environment: 'dev'
               }
             })
