--- a/.github/workflows/js-create-release.yml
+++ b/.github/workflows/js-create-release.yml
@@ -11,10 +11,12 @@ on:
         default: main
         description: Reusable workflow branch/tag/etc I am being called in.
 
+concurrency: create-release
+run-name: Create Release + Auto Deploy by @${{ github.actor }}
+
 name: merge-to-main-release-please
 jobs:
   create-release:
-    concurrency: create-release
     runs-on: ubuntu-latest
     outputs:
       release-tag: ${{ steps.tag-out.outputs.value }}
@@ -75,7 +77,6 @@ jobs:
   deploy-release:
     needs: create-release
     runs-on: ubuntu-latest
-    concurrency: deploy-dev
     steps:
       - name: Release Thunk
         run: echo "Deployed Tag ${{ needs.create-release.outputs.release-tag }}"
@@ -87,9 +88,6 @@ jobs:
             github.rest.actions.createWorkflowDispatch({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              workflow_id: 'deployment.yml',
+              workflow_id: 'deployment-auto.yml',
               ref: 'refs/tags/${{ needs.create-release.outputs.release-tag }}',
-              inputs: {
-                environment: 'dev'
-              }
             })
