feat: comment on PR about why release can't be made.

--- a/.github/workflows/js-create-release.yml
+++ b/.github/workflows/js-create-release.yml
@@ -37,8 +37,16 @@ jobs:
           git config user.email "$(git log -n 1 --pretty=format:%ae)"
           yarn commit-and-tag-version
           # Push branch first, if this fails we want to stop here (before push tag).
+      - name: Push Release To Main
+          echo "If Below Push Fails, that means another PR was merged; we let that next PR create the release and let us remain failed here.
           git push origin main
           git push --follow-tags origin main
+      - name: If Push Fails, Comment On PR About Why
+        if: failure() && github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged
+        uses: thollander/actions-comment-pull-request@v2
+        with:
+          message: |
+            :robot: Release can't be directly created due to another merged PR near same time; this will be released with this other PR's release.
       - name: Get Tag Name
         id: tag-out
         run: |
