--- a/.github/workflows/js-create-release.yml
+++ b/.github/workflows/js-create-release.yml
@@ -39,7 +39,7 @@ jobs:
           # Push branch first, if this fails we want to stop here (before push tag).
       - name: Push Release To Main
         run: |
-          echo "If Below Push Fails, that means another PR was merged; we let that next PR create the release and let us remain failed here.
+          echo "If Below Push Fails, that means another PR was merged; we let that next PR create the release and let us remain failed here."
           git push origin main
           git push --follow-tags origin main
       - name: If Push Fails, Comment On PR About Why
