--- a/.github/workflows/js-deploy-prs-w-sls.yml
+++ b/.github/workflows/js-deploy-prs-w-sls.yml
@@ -12,9 +12,8 @@ on:
         description: Host name to link to (will prepend 'prs*' to start of host).
         required: true
 
-concurrency:
-  group: deploy-pr-${{ github.event.number }}
-  # cancel-in-progress: true
+concurrency: deploy-pr-${{ github.event.number }}
+name: Deploy PR ${{ github.event.number }}
 
 jobs:
   get-prs-slot:
@@ -22,6 +21,8 @@ jobs:
     outputs:
       slot-num: ${{ steps.slot-num.outputs.result }}
     steps:
+      - name: Attached To PR ${{ github.event.number }}
+        run: echo Attached To PR ${{ github.event.number }}
       - uses: zerapix/reusable-workflows/all-checkout@test
         with:
           reusable-ref: ${{ inputs.reusable-ref }}
