--- a/all-checkout/action.yml
+++ b/all-checkout/action.yml
@@ -14,11 +14,18 @@ runs:
     #----------------------------------------------
     #       Check-out repo, set-up node + yarn
     #----------------------------------------------
+    - name: zReleaseBot Token
+      id: my-app
+      uses: getsentry/action-github-app-token@v2
+      with:
+        app_id: ${{ secrets.ZRELEASEBOT_APP_ID }}
+        private_key: ${{ secrets.ZRELEASEBOT_PRIVATE_KEY }}
     - name: Checkout Project Repo
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         # fetch-depth 0 will check out all the commits and tags needed for release-bumper
         fetch-depth: ${{ inputs.fetch-depth }}
+        token: ${{ steps.my-app.outputs.token }}
     - name: Checkout Reusable Repo
       uses: actions/checkout@v3
       with:
