feat: use v4 for checking; use app token for reusable checkout.

--- a/all-checkout/action.yml
+++ b/all-checkout/action.yml
@@ -27,8 +27,9 @@ runs:
         fetch-depth: ${{ inputs.fetch-depth }}
         token: ${{ steps.my-app.outputs.token }}
     - name: Checkout Reusable Repo
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         repository: zerapix/reusable-workflows
         path: .reusable-workflows
         ref: ${{ inputs.reusable-ref }}
+        token: ${{ steps.my-app.outputs.token }}
