--- a/.github/workflows/js-create-release.yml
+++ b/.github/workflows/js-create-release.yml
@@ -28,6 +28,9 @@ jobs:
           # fetch-depth 0 will check out all the commits and tags needed for release-bumper
           fetch-depth: 0
           reusable-ref: ${{ inputs.reusable-ref }}
+          zreleasebot_app_id: ${{ secrets.ZRELEASEBOT_APP_ID }}
+          zreleasebot_private_key: ${{ secrets.ZRELEASEBOT_PRIVATE_KEY }}
+
       - uses: ./.reusable-workflows/js-setup-project
 
       - run: echo Running On Ref ${{ github.ref }}
@@ -48,6 +51,7 @@ jobs:
         with:
           message: |
             :robot: Release can't be directly created due to another merged PR near same time; this will be released with this other PR's release.
+
       - name: Get Tag Name
         id: tag-out
         run: |
