--- a/.github/workflows/js-deploy-w-sls.yml
+++ b/.github/workflows/js-deploy-w-sls.yml
@@ -37,6 +37,8 @@ jobs:
           # fetch-depth 0 will check out all the commits and tag history.
           fetch-depth: 0
           reusable-ref: ${{ inputs.reusable-ref }}
+          zreleasebot_app_id: ${{ secrets.ZRELEASEBOT_APP_ID }}
+          zreleasebot_private_key: ${{ secrets.ZRELEASEBOT_PRIVATE_KEY }}
       - uses: ./.reusable-workflows/js-setup-project
 
       # Setup pre-release version string on package if needed
