--- a/.github/workflows/js-test.yml
+++ b/.github/workflows/js-test.yml
@@ -17,6 +17,8 @@ jobs:
           # fetch-depth 0 will check out all the commits and tags needed for release-bumper
           fetch-depth: 0
           reusable-ref: ${{ inputs.reusable-ref }}
+          zreleasebot_app_id: ${{ secrets.ZRELEASEBOT_APP_ID }}
+          zreleasebot_private_key: ${{ secrets.ZRELEASEBOT_PRIVATE_KEY }}
       - uses: ./.reusable-workflows/js-setup-project
 
       - run: echo "Running On Action Path $GITHUB_ACTION_PATH  --- pwd:"
