--- a/py-create-release/action.yml
+++ b/py-create-release/action.yml
@@ -15,7 +15,7 @@ outputs:
 runs:
   using: composite
   steps:
-    - uses: zerapix/reusable-workflows/py-run-tests@test
+    - uses: ./.reusable-workflows/py-run-tests
       with:
         GEMFURY_DEPLOY_TOKEN: ${{ inputs.GEMFURY_DEPLOY_TOKEN }}
     - name: Install tomlkit
