--- a/.github/workflows/py-create-release.yml
+++ b/.github/workflows/py-create-release.yml
@@ -36,6 +36,8 @@ jobs:
         with:
           timeout-minutes: 20
           limit-access-to-actor: true
+
+        
       - uses: zerapix/reusable-workflows/all-checkout@test
         with:
           # fetch-depth 0 will check out all the commits and tags needed for release-bumper
@@ -53,13 +55,13 @@ jobs:
 #          AWS_SECRET_ACCESS_KEY: ${{ inputs.AWS_SECRET_ACCESS_KEY }}
 #          APP_ENV: ${{ inputs.environment }}
 
-      - uses: ./.reusable-workflows/py-setup-project
+      - uses: ../.reusable-workflows/py-setup-project
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
 
 
 
-      - uses: ./.reusable-workflows/py-create-release
+      - uses: ../.reusable-workflows/py-create-release
         id: release
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
