--- a/.github/workflows/py-create-release.yml
+++ b/.github/workflows/py-create-release.yml
@@ -55,14 +55,16 @@ jobs:
 #          AWS_SECRET_ACCESS_KEY: ${{ inputs.AWS_SECRET_ACCESS_KEY }}
 #          APP_ENV: ${{ inputs.environment }}
 
-      - uses: ../.reusable-workflows/py-setup-project
-        with:
-          GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
+      - name: Fail It!
+        shell: bash
+        run: exit 1
 
 
-
-      - uses: ../.reusable-workflows/py-create-release
-        id: release
-        with:
-          GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
-          release-branch: ${{ inputs.release-branch }}
+#      - uses: ../.reusable-workflows/py-setup-project
+#        with:
+#          GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
+#      - uses: ../.reusable-workflows/py-create-release
+#        id: release
+#        with:
+#          GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
+#          release-branch: ${{ inputs.release-branch }}
