--- a/.github/workflows/py-create-release.yml
+++ b/.github/workflows/py-create-release.yml
@@ -30,15 +30,15 @@ jobs:
     outputs:
       release-tag: ${{ steps.tag-out.outputs.value }}
     steps:
-      - name: (debug + failure) Setup SSH Session
-        uses: mxschmitt/action-tmate@v3
-#        if: ${{ runner.debug == 1 }}
-        with:
-          timeout-minutes: 20
-          limit-access-to-actor: true
+#      - name: (debug + failure) Setup SSH Session
+#        uses: mxschmitt/action-tmate@v3
+##        if: ${{ runner.debug == 1 }}
+#        with:
+#          timeout-minutes: 20
+#          limit-access-to-actor: true
 
         
-      - uses: zerapix/reusable-workflows/all-checkout@test
+      - uses: ./reusable-workflows/all-checkout
         with:
           # fetch-depth 0 will check out all the commits and tags needed for release-bumper
           fetch-depth: 0
