--- a/.github/workflows/js-test.yml
+++ b/.github/workflows/js-test.yml
@@ -19,7 +19,7 @@ jobs:
           reusable-ref: ${{ inputs.reusable-ref }}
           zreleasebot_app_id: ${{ secrets.ZRELEASEBOT_APP_ID }}
           zreleasebot_private_key: ${{ secrets.ZRELEASEBOT_PRIVATE_KEY }}
-      - uses: ../.reusable-workflows/js-setup-project
+      - uses: ./.reusableusable-workflows/js-setup-project
 
       - run: echo "Running On Action Path $GITHUB_ACTION_PATH  --- pwd:"
       - run: echo "pwd-path - $(pwd)"
@@ -30,7 +30,7 @@ jobs:
           echo Context Info:
           printf '%s\n' "$JSON_DOC" > foo.json
           cat foo.json
-      - uses: ../.reusable-workflows/js-test-action
+      - uses: ./.reusableusable-workflows/js-test-action
 ##      # Can use this to get an SSH endpoint you can connect to and debug via a terminal session.
 #      - name: Setup tmate session
 #        uses: mxschmitt/action-tmate@v3
