--- a/.github/workflows/js-deploy-prs-w-sls.yml
+++ b/.github/workflows/js-deploy-prs-w-sls.yml
@@ -28,14 +28,14 @@ jobs:
           reusable-ref: ${{ inputs.reusable-ref }}
           zreleasebot_app_id: ${{ secrets.ZRELEASEBOT_APP_ID }}
           zreleasebot_private_key: ${{ secrets.ZRELEASEBOT_PRIVATE_KEY }}
-      - uses: ../.reusable-workflows/js-setup-project
+      - uses: ./.reusableusable-workflows/js-setup-project
 
       # Get/Assign the prs* stage name for pr.
       - uses: actions/github-script@v6
         id: slot-num
         with:  # "pixydocs.dev.zerapix.com"
           script: |
-            const script = require('../.reusable-workflows/scripts/get-pr-slot.js')
+            const script = require('./.reusableusable-workflows/scripts/get-pr-slot.js')
             const devAppHost = '${{ inputs.dev-app-host }}'
             return script({github, context, devAppHost})
       - run: echo "Assigned PR Slot (${{ steps.slot-num.outputs.result }})."
