--- a/.github/workflows/py-create-release.yml
+++ b/.github/workflows/py-create-release.yml
@@ -30,19 +30,15 @@ jobs:
     outputs:
       release-tag: ${{ steps.tag-out.outputs.value }}
     steps:
+#      - name: (debug + failure) Setup SSH Session
+#        uses: mxschmitt/action-tmate@v3
+##        if: ${{ runner.debug == 1 }}
+#        with:
+#          timeout-minutes: 20
+#          limit-access-to-actor: true
 
-      - name: Symlink Reusable Workflows
-        shell: bash
-        run: ln -s /home/runner/work/_actions/zerapix/reusable-workflows/${{ inputs.reusable-ref }} .reusable-workflows
 
-      - name: (debug + failure) Setup SSH Session
-        uses: mxschmitt/action-tmate@v3
-#        if: ${{ runner.debug == 1 }}
-        with:
-          timeout-minutes: 20
-          limit-access-to-actor: true
-
-      - uses: ./reusable-workflows/all-checkout
+      - uses: zerapix/reusable-workflows/all-checkout@test
         with:
           # fetch-depth 0 will check out all the commits and tags needed for release-bumper
           fetch-depth: 0
@@ -64,10 +60,10 @@ jobs:
         run: exit 1
 
 
-#      - uses: ../.reusable-workflows/py-setup-project
-#        with:
-#          GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
-#      - uses: ../.reusable-workflows/py-create-release
+      - uses: ./.reusable-workflows/py-setup-project
+        with:
+          GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
+#      - uses: ./.reusableusable-workflows/py-create-release
 #        id: release
 #        with:
 #          GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
