--- a/.github/workflows/py-create-release.yml
+++ b/.github/workflows/py-create-release.yml
@@ -31,8 +31,6 @@ jobs:
       release-tag: ${{ steps.tag-out.outputs.value }}
     steps:
 
-
-
       - uses: zerapix/reusable-workflows/all-checkout@test
         with:
           # fetch-depth 0 will check out all the commits and tags needed for release-bumper
@@ -41,26 +39,19 @@ jobs:
           zreleasebot_app_id: ${{ secrets.ZRELEASEBOT_APP_ID }}
           zreleasebot_private_key: ${{ secrets.ZRELEASEBOT_PRIVATE_KEY }}
 
-      - name: (debug + failure) Setup SSH Session
-        uses: mxschmitt/action-tmate@v3
-#        if: ${{ runner.debug == 1 }}
-        with:
-          timeout-minutes: 20
-          limit-access-to-actor: true
-#        env:
-#          # todo: checkout what we can do with `SERVERLESS_ACCESS_KEY`:
-#          #  SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
-#          # todo: For now use AWS credentials directly
-#          AWS_ACCESS_KEY_ID: ${{ inputs.AWS_ACCESS_KEY_ID }}
-#          AWS_SECRET_ACCESS_KEY: ${{ inputs.AWS_SECRET_ACCESS_KEY }}
-#          APP_ENV: ${{ inputs.environment }}
+#      - name: (debug + failure) Setup SSH Session
+#        uses: mxschmitt/action-tmate@v3
+##        if: ${{ runner.debug == 1 }}
+#        with:
+#          timeout-minutes: 20
+#          limit-access-to-actor: true
 
 
       - uses: ./.reusable-workflows/py-setup-project
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
-#      - uses: ./.reusableusable-workflows/py-create-release
-#        id: release
-#        with:
-#          GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
-#          release-branch: ${{ inputs.release-branch }}
+      - uses: ./.reusableusable-workflows/py-create-release
+        id: release
+        with:
+          GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
+          release-branch: ${{ inputs.release-branch }}
