--- a/all-commit-and-tag-release/action.yml
+++ b/all-commit-and-tag-release/action.yml
@@ -11,6 +11,14 @@ runs:
       shell: bash
     - run: cp .reusable-workflows/versionsrc-config/python.versionrc.json .versionrc.json
       shell: bash
+
+    - name: (debug + failure) Setup SSH Session
+      uses: mxschmitt/action-tmate@v3
+    #        if: ${{ runner.debug == 1 }}
+      with:
+        timeout-minutes: 20
+        limit-access-to-actor: true
+
     - name: Increment, Tag and Commit for Release
       shell: bash
       run: |
