fix: modify version config files.

--- a/py-create-release/action.yml
+++ b/py-create-release/action.yml
@@ -34,7 +34,9 @@ runs:
       shell: bash
       run: |
         cp .reusable-workflows/versionsrc-config/python.versionrc.json .versionrc.json
-        echo "`jq '.bumpFiles[2].filename="${{ env.PY_Z_MODULE }}/__init__.py"' .versionrc.json` > .versionrc.json
+        echo "`jq '.bumpFiles[2].filename="$PY_Z_MODULE/__init__.py"' config.json`"
+      env:
+        PY_Z_MODULE: ${{ env.PY_Z_MODULE }}
 
     - uses: ./.reusable-workflows/all-commit-and-tag-release
 
