--- a/py-create-release/action.yml
+++ b/py-create-release/action.yml
@@ -37,12 +37,12 @@ runs:
         echo "`jq '.bumpFiles[2].filename="'$PY_Z_MODULE'/__init__.py"' .versionrc.json`" > .versionrc.json
       env:
         PY_Z_MODULE: ${{ env.PY_Z_MODULE }}
-#    - name: (debug + failure) Setup SSH Session
-#      uses: mxschmitt/action-tmate@v3
-#    #        if: ${{ runner.debug == 1 }}
-#      with:
-#        timeout-minutes: 20
-#        limit-access-to-actor: true
+    - name: (debug + failure) Setup SSH Session
+      uses: mxschmitt/action-tmate@v3
+    #        if: ${{ runner.debug == 1 }}
+      with:
+        timeout-minutes: 20
+        limit-access-to-actor: true
     - uses: ./.reusable-workflows/all-commit-and-tag-release
 
 #      id: release
