--- a/all-commit-and-tag-release/action.yml
+++ b/all-commit-and-tag-release/action.yml
@@ -1,5 +1,9 @@
 name: Commit And Tag Release
 description: Reusable action to commit and tag release via commit-and-tag-version.
+outputs:
+  version-tag-name:
+    description: Name of the create version tag.
+    value: ${{ steps.tag-out.outputs.value }}
 runs:
   using: composite
   steps:
@@ -10,13 +14,6 @@ runs:
     - run: npm install commit-and-tag-version
       shell: bash
 
-#    - name: (debug + failure) Setup SSH Session
-#      uses: mxschmitt/action-tmate@v3
-#    #        if: ${{ runner.debug == 1 }}
-#      with:
-#        timeout-minutes: 20
-#        limit-access-to-actor: true
-
     - name: Increment, Tag and Commit for Release
       shell: bash
       run: |
@@ -24,6 +21,7 @@ runs:
         git config user.email "$(git log -n 1 --pretty=format:%ae)"
         yarn commit-and-tag-version
         # Push branch first, if this fails we want to stop here (before push tag).
+
     - name: Push Release To Main
       shell: bash
       run: |
@@ -38,7 +36,6 @@ runs:
       with:
         message: |
           :robot: Release can't be directly created due to another merged PR near same time; this will be released with this other PR's release.
-    
 
     - name: Get Tag Name
       shell: bash
@@ -47,6 +44,7 @@ runs:
         tag_name=$( (git describe --tags --abbrev=0 | tr -d " \n\t\r") )
         echo "Using Tag Name: $tag_name"
         echo "value=$tag_name" >> $GITHUB_OUTPUT
+
     - name: Get Changelog
       shell: bash
       id: change-log
@@ -57,6 +55,7 @@ runs:
         echo "value<<$EOF" >> $GITHUB_OUTPUT
         echo "$change_log" >> $GITHUB_OUTPUT
         echo "$EOF" >> $GITHUB_OUTPUT
+
     - name: Create Release
       uses: softprops/action-gh-release@v1
       id: create-release
@@ -65,6 +64,15 @@ runs:
         name: ${{ steps.tag-out.outputs.value }}
         generate_release_notes: false
         body: ${{ steps.change-log.outputs.value }}
+
     - name: Debug Event Info
       shell: bash
       run: echo event_name ${{ github.event_name }} action ${{ github.event.action }} merged ${{ github.event.pull_request.merged }}
+
+    # If we are a `pull_request` event, we can add a comment to it about the release.
+    - name: Link From PR to Release
+      if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged
+      uses: thollander/actions-comment-pull-request@v2
+      with:
+        message: |
+          :robot: Released As ${{ steps.tag-out.outputs.value }}, ${{ steps.create-release.outputs.url }}
