--- a/.github/workflows/py-create-release.yml
+++ b/.github/workflows/py-create-release.yml
@@ -20,15 +20,17 @@ on:
       created-release:
         description: "If final/tagged release was created or not."
         value: ${{ jobs.create-pre-or-release.outputs.created-release }}
+concurrency: create-release
+run-name: Create Release + Auto Deploy by @${{ github.actor }}
 
 name: Create Release
 jobs:
-  create-pre-or-release:
+  create-release:
     runs-on: ubuntu-latest
     # If are already on a 'release' commit, we should skip this job.
     if: "!startsWith(github.event.head_commit.message, 'chore(release): ')"
     outputs:
-      release-tag: ${{ steps.tag-out.outputs.value }}
+      created-release-tag-name: ${{ steps.release.outputs.created-release-tag-name }}
     steps:
 
       - uses: zerapix/reusable-workflows/all-checkout@test
@@ -39,19 +41,33 @@ jobs:
           zreleasebot_app_id: ${{ secrets.ZRELEASEBOT_APP_ID }}
           zreleasebot_private_key: ${{ secrets.ZRELEASEBOT_PRIVATE_KEY }}
 
-#      - name: (debug + failure) Setup SSH Session
-#        uses: mxschmitt/action-tmate@v3
-##        if: ${{ runner.debug == 1 }}
-#        with:
-#          timeout-minutes: 20
-#          limit-access-to-actor: true
-
 
       - uses: ./.reusable-workflows/py-setup-project
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
+
       - uses: ./.reusable-workflows/py-create-release
         id: release
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
           release-branch: ${{ inputs.release-branch }}
+
+  # Create Separate Job, to distinguish release-creation from deployment
+  # (release could have succeeded but deployment fail, can easily re-run deployment without running create-release again)
+  deploy-release:
+    needs: create-release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Release Thunk
+        run: echo "Deployed Tag ${{ needs.create-release.outputs.created-release-tag-name }}"
+      - name: Trigger Workflow
+        uses: actions/github-script@v6
+        with:
+          # Run a new workflow job, using originating repo's standard `deployment.yml` via workflow_dispatch
+          script: |
+            github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: 'deployment-auto.yml',
+              ref: 'refs/tags/${{ needs.create-release.outputs.created-release-tag-name }}',
+            })
