--- a/py-create-release/action.yml
+++ b/py-create-release/action.yml
@@ -9,9 +9,9 @@ inputs:
     default: ''
     description: Branch to open pull release PR against (defaults to repo default branch if not specified).
 outputs:
-  created-release:
-    description: true if a versioned release was created (false if only made release candidate PR)
-    value: ${{ steps.release.outputs.release_created }}
+  created-release-tag-name:
+    description: Tag name of the created release
+    value: ${{ steps.release.outputs.created-release-tag-name }}
 runs:
   using: composite
   steps:
@@ -37,16 +37,6 @@ runs:
         echo "`jq '.bumpFiles[2].filename="'$PY_Z_MODULE'/__init__.py"' .versionrc.json`" > .versionrc.json
       env:
         PY_Z_MODULE: ${{ env.PY_Z_MODULE }}
-    - name: (debug + failure) Setup SSH Session
-      uses: mxschmitt/action-tmate@v3
-    #        if: ${{ runner.debug == 1 }}
-      with:
-        timeout-minutes: 20
-        limit-access-to-actor: true
     - uses: ./.reusable-workflows/all-commit-and-tag-release
+      id: release
 
-#      id: release
-#      with:
-#        release-type: python
-#        package-name: ${{ env.PY_PKG }}
-#        default-branch: ${{ inputs.release-branch }}
