--- a/.github/workflows/py-create-release.yml
+++ b/.github/workflows/py-create-release.yml
@@ -41,6 +41,12 @@ jobs:
           zreleasebot_app_id: ${{ secrets.ZRELEASEBOT_APP_ID }}
           zreleasebot_private_key: ${{ secrets.ZRELEASEBOT_PRIVATE_KEY }}
 
+      - name: (debug + failure) Setup SSH Session
+        uses: mxschmitt/action-tmate@v3
+        if: ${{ runner.debug == 1 }}
+        with:
+          timeout-minutes: 20
+          limit-access-to-actor: true
 
       - uses: ./.reusable-workflows/py-setup-project
         with:
