--- a/.github/workflows/py-create-release.yml
+++ b/.github/workflows/py-create-release.yml
@@ -41,9 +41,8 @@ jobs:
           zreleasebot_app_id: ${{ secrets.ZRELEASEBOT_APP_ID }}
           zreleasebot_private_key: ${{ secrets.ZRELEASEBOT_PRIVATE_KEY }}
 
-      - name: (debug + failure) Setup SSH Session
+      - name: Setup SSH Session
         uses: mxschmitt/action-tmate@v3
-        if: ${{ runner.debug == 1 }}
         with:
           timeout-minutes: 20
           limit-access-to-actor: true
