--- a/.github/workflows/js-create-release.yml
+++ b/.github/workflows/js-create-release.yml
@@ -5,11 +5,6 @@
 
 on:
   workflow_call:
-    inputs:
-      reusable-ref:
-        type: string
-        default: main
-        description: Reusable workflow branch/tag/etc I am being called in.
 
 concurrency: create-release
 run-name: Create Release + Auto Deploy by @${{ github.actor }}
@@ -19,15 +14,12 @@ jobs:
   create-release:
     runs-on: ubuntu-latest
     outputs:
-      release-tag: ${{ steps.tag-out.outputs.value }}
+      created-release-tag-name: ${{ steps.release.outputs.created-release-tag-name }}
     # If are already on a 'release' commit, we should skip this job.
     if: "!startsWith(github.event.head_commit.message, 'chore(release): ')"
     steps:
-      - uses: zerapix/reusable-workflows/all-checkout@test
+      - uses: zerapix/reusable-workflows/all-checkout-writable@test
         with:
-          # fetch-depth 0 will check out all the commits and tags needed for release-bumper
-          fetch-depth: 0
-          reusable-ref: ${{ inputs.reusable-ref }}
           zreleasebot_app_id: ${{ secrets.ZRELEASEBOT_APP_ID }}
           zreleasebot_private_key: ${{ secrets.ZRELEASEBOT_PRIVATE_KEY }}
 
@@ -38,15 +30,18 @@ jobs:
         run: cp .reusable-workflows/versionsrc-config/javascript.versionrc.json .versionrc.json
 
       - uses: ./.reusable-workflows/all-commit-and-tag-release
+        id: release
 
   # Create Separate Job, to distinguish release-creation from deployment
   # (release could have succeeded but deployment fail, can easily re-run deployment without running create-release again)
   deploy-release:
     needs: create-release
     runs-on: ubuntu-latest
+    # If are already on a 'release' commit, we should skip this job.
+    if: "!startsWith(github.event.head_commit.message, 'chore(release): ')"
     steps:
       - name: Release Thunk
-        run: echo "Deployed Tag ${{ needs.create-release.outputs.release-tag }}"
+        run: echo "Deployed Tag ${{ needs.create-release.outputs.created-release-tag-name }}"
       - name: Trigger Workflow
         uses: actions/github-script@v6
         with:
@@ -56,5 +51,5 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               workflow_id: 'deployment-auto.yml',
-              ref: 'refs/tags/${{ needs.create-release.outputs.release-tag }}',
+              ref: 'refs/tags/${{ needs.create-release.outputs.created-release-tag-name }}',
             })
