--- a/.github/workflows/js-deploy-prs-w-sls.yml
+++ b/.github/workflows/js-deploy-prs-w-sls.yml
@@ -2,11 +2,6 @@
 on:
   workflow_call:
     inputs:
-      reusable-ref:
-        type: string
-        default: main
-        description: Reusable workflow branch/tag/etc I am being called in.
-
       dev-app-host:
         type: string
         description: Host name to link to (will prepend 'prs*' to start of host).
@@ -24,10 +19,6 @@ jobs:
       - name: Deploying PR ${{ github.event.number }}
         run: echo Attached To PR ${{ github.event.number }}
       - uses: zerapix/reusable-workflows/all-checkout@test
-        with:
-          reusable-ref: ${{ inputs.reusable-ref }}
-          zreleasebot_app_id: ${{ secrets.ZRELEASEBOT_APP_ID }}
-          zreleasebot_private_key: ${{ secrets.ZRELEASEBOT_PRIVATE_KEY }}
       - uses: ./.reusable-workflows/js-setup-project
 
       # Get/Assign the prs* stage name for pr.
@@ -42,10 +33,9 @@ jobs:
 
   deploy-prs:
     needs: get-prs-slot
-    uses: zerapix/reusable-workflows/.github/workflows/js-deploy-w-sls.yml@test
+    uses: ./.reusable-workflows/.github/workflows/js-deploy-w-sls.yml
     secrets: inherit
     with:
       environment: 'prs'
       override-stage-name: 'prs${{ needs.get-prs-slot.outputs.slot-num }}'
       pre-release: true
-      reusable-ref: ${{ inputs.reusable-ref }}
