--- a/.github/workflows/py-create-release.yml
+++ b/.github/workflows/py-create-release.yml
@@ -3,28 +3,21 @@
 on:
   workflow_call:
     inputs:
-      reusable-ref:
-        type: string
-        default: main
-        description: Reusable workflow branch/tag/etc I am being called in.
+      need-testing-db:
+        type: boolean
+        default: false
+        description: If DB service is needed for testing.
 
-      # *** Ignored Inputs ***
-      # (here in case something tries to pass it in, workflow will still work).
-      RUN_TESTS:
-        required: false
-        type: string
-        description: _ ***CURRENTLY IGNORED** Python package we are versioning/deploying; only skips if string is set to 'false' (using string, as composite actions only use strings)
-        default: 'true'
-
-    outputs:
-      created-release:
-        description: "If final/tagged release was created or not."
-        value: ${{ jobs.create-pre-or-release.outputs.created-release }}
 concurrency: create-release
 run-name: Create Release + Auto Deploy by @${{ github.actor }}
 
 name: Create Release
 jobs:
+  test-with-db-if-needed:
+    name: Test With DB If Needed
+    if: ${{ inputs.need-testing-db }}
+    uses: zerapix/reusable-workflows/.github/workflows/py-test-w-db.yml@test
+
   create-release:
     runs-on: ubuntu-latest
     # If are already on a 'release' commit, we should skip this job.
@@ -32,16 +25,18 @@ jobs:
     outputs:
       created-release-tag-name: ${{ steps.release.outputs.created-release-tag-name }}
     steps:
-
-      - uses: zerapix/reusable-workflows/all-checkout@test
+      - uses: zerapix/reusable-workflows/all-checkout-writable@test
         with:
-          # fetch-depth 0 will check out all the commits and tags needed for release-bumper
-          fetch-depth: 0
-          reusable-ref: ${{ inputs.reusable-ref }}
           zreleasebot_app_id: ${{ secrets.ZRELEASEBOT_APP_ID }}
           zreleasebot_private_key: ${{ secrets.ZRELEASEBOT_PRIVATE_KEY }}
 
       - uses: ./.reusable-workflows/py-setup-project
+        with:
+          GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
+
+      - uses: ./.reusable-workflows/py-run-tests
+        name: Normal Test (without DB)
+        if: ${{ !inputs.need-testing-db }}
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
 
@@ -56,6 +51,8 @@ jobs:
   deploy-release:
     needs: create-release
     runs-on: ubuntu-latest
+    # If are already on a 'release' commit, we should skip this job.
+    if: "!startsWith(github.event.head_commit.message, 'chore(release): ')"
     steps:
       - name: Release Thunk
         run: echo "Deployed Tag ${{ needs.create-release.outputs.created-release-tag-name }}"
