--- a/.github/workflows/py-test-w-db.yml
+++ b/.github/workflows/py-test-w-db.yml
@@ -12,8 +12,9 @@ jobs:
       POSTGRES_PORT: 5432
       POSTGRES_HOST: localhost
     steps:
+      - uses: zerapix/reusable-workflows/all-checkout@test
       - name: Setup and Test Project
-        uses: zerapix/reusable-workflows/py-run-tests@test
+        uses: ./.reusable-workflows/py-run-tests
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
     services:
