--- a/py-run-tests/action.yml
+++ b/py-run-tests/action.yml
@@ -1,24 +1,8 @@
-name: 'Setup Python Project + Run Unit Tests'
+name: 'Run Unit Tests'
 description: 'Reusable action to setup python, poetry and project dependencies in a standard way.'
-inputs:
-  GEMFURY_DEPLOY_TOKEN:
-    description: Gemfury Deploy Token
-    required: false
-    default: ''
-  RUN_TESTS:
-    description: If equal to exactly 'false', will skip running tests.
-    required: false
-    default: 'true'
 runs:
   using: "composite"
   steps:
-     # TODO: Make sure we always check it out at the workflow level
-     #     now, and not have it implied with the testing action.
-#    - name: Setup Python Project
-#      uses: ./.reusable-workflows/py-setup-project
-#      with:
-#        GEMFURY_DEPLOY_TOKEN: ${{ inputs.GEMFURY_DEPLOY_TOKEN }}
     - name: Run tests
-#      if: ${{ inputs.RUN_TESTS != 'false' }}
       shell: bash
       run: poetry run pytest
