--- a/.github/workflows/py-create-release.yml
+++ b/.github/workflows/py-create-release.yml
@@ -19,6 +19,7 @@ jobs:
     uses: zerapix/reusable-workflows/.github/workflows/py-test-w-db.yml@test
 
   create-release:
+    needs: test-with-db-if-needed
     runs-on: ubuntu-latest
     # If are already on a 'release' commit, we should skip this job.
     if: "!startsWith(github.event.head_commit.message, 'chore(release): ')"
