--- a/.github/workflows/py-create-release.yml
+++ b/.github/workflows/py-create-release.yml
@@ -22,7 +22,8 @@ jobs:
     needs: test-with-db-if-needed
     runs-on: ubuntu-latest
     # If are already on a 'release' commit, we should skip this job.
-    if: "!startsWith(github.event.head_commit.message, 'chore(release): ')"
+    # We have `always()` so this job still runs even if `test-with-db-if-needed` is skipped.
+    if: "${{ always() && !startsWith(github.event.head_commit.message, 'chore(release): ') && !failure() && !cancelled() }}"
     outputs:
       created-release-tag-name: ${{ steps.release.outputs.created-release-tag-name }}
     steps:
@@ -53,7 +54,8 @@ jobs:
     needs: create-release
     runs-on: ubuntu-latest
     # If are already on a 'release' commit, we should skip this job.
-    if: "!startsWith(github.event.head_commit.message, 'chore(release): ')"
+    # We have `always()` so this job still runs even if `test-with-db-if-needed` is skipped.
+    #if: "${{ always() && !startsWith(github.event.head_commit.message, 'chore(release): ') && !failure() && !cancelled() }}"
     steps:
       - name: Release Thunk
         run: echo "Deployed Tag ${{ needs.create-release.outputs.created-release-tag-name }}"
