--- a/.github/workflows/py-test.yml
+++ b/.github/workflows/py-test.yml
@@ -6,7 +6,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: zerapix/reusable-workflows/all-checkout@main
+      - uses: zerapix/reusable-workflows/all-checkout@z_v2
       - name: Setup and Test Project
         uses: ./.reusable-workflows/py-run-tests
         with:
