fix: tests need to have project setup before they are ran.

--- a/.github/workflows/py-test-w-db.yml
+++ b/.github/workflows/py-test-w-db.yml
@@ -13,10 +13,11 @@ jobs:
       POSTGRES_HOST: localhost
     steps:
       - uses: zerapix/reusable-workflows/all-checkout@z_v2
-      - name: Setup and Test Project
-        uses: ./.reusable-workflows/py-run-tests
+      - uses: ./.reusable-workflows/py-setup-project
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
+      - name: Setup and Test Project
+        uses: ./.reusable-workflows/py-run-tests
     services:
       postgres:
         image: postgres:14
