--- a/.github/workflows/py-test.yml
+++ b/.github/workflows/py-test.yml
@@ -7,7 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: zerapix/reusable-workflows/all-checkout@z_v2
-      - name: Setup and Test Project
-        uses: ./.reusable-workflows/py-run-tests
+      - uses: ./.reusable-workflows/py-setup-project
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
+      - name: Setup and Test Project
+        uses: ./.reusable-workflows/py-run-tests
